Add get_linking_events method filter for jinja2
Add fill-green-border-darkgreen and fill-darkred-border-red style classes

Add show_hide option to allow hiding timelines in the timeline graph

Add API query_entity_alerts_and_render to obtain alerts associated to an entity by querying using the entity's UUID

--- a/src/vboa/static/css/vboa.css
+++ b/src/vboa/static/css/vboa.css
@@ -175,6 +175,10 @@ div.apply-timeliness-overflow .vis-item .vis-item-overflow {
     background: green;
     border-color: green;
 }
+.fill-green-border-darkgreen {
+    background: green;
+    border-color: darkgreen;
+}
 .fill-border-blue {
     background: blue;
     border-color: blue;
@@ -193,6 +197,10 @@ div.apply-timeliness-overflow .vis-item .vis-item-overflow {
 }
 .fill-border-red {
     background: red;
+    border-color: red;
+}
+.fill-darkred-border-red {
+    background: darkred;
     border-color: red;
 }
 .fill-border-orange {
