New manual ingestion control view

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -132,6 +132,9 @@
                 <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Ingestion control<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                   <li>
+                    <a href="/ingestion_control/manual-ingestion"><i class="fa fa-folder-open-o"></i> Manual ingestion</a>
+                  </li>
+                  <li>
                     <a href="/ingestion_control/ingestion_control"><i class="fa fa-fw fa-tachometer"></i> Complete view</a>
                   </li>
                   <li>
