--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -27,6 +27,8 @@
   </head>
 
   <body id="boa-body">
+    <div id="updating-page-count-down">
+    </div>
     <div id="updating-page">
     </div>
     <div>{% block project_header %}{% endblock %}</div>
